--- a/containers/themes/ice_energia/login/resources/css/login.css
+++ b/containers/themes/ice_energia/login/resources/css/login.css
@@ -8,8 +8,14 @@
     display: block;
     background-position: center;
 }
-.login-pf-page .test {
-    background: url(../../../../ice_energia/login/resources/img/logo_ice.png);
+
+.test {  
+    text-align: center;
+    height: 50px;
+    width: 100px;
+   /* background: url(../img/logo_ice.png);*/
+    background: url(../img/favicon.ico);
+    background-repeat: no-repeat;
 }
 
 .card-pf {  
