cambio de imagenes y clases para que acepte 10 diferentes

--- a/containers/themes/ice_energia/login/resources/css/login.css
+++ b/containers/themes/ice_energia/login/resources/css/login.css
@@ -26,6 +26,25 @@
 .fondo5 {  
     background: url(../img/fondo05.png)!important;
 }
+.fondo6 {  
+    background: url(../img/fondo06.png)!important;
+}
+
+.fondo7 {  
+    background: url(../img/fondo07.png)!important;
+}
+
+.fondo8 {  
+    background: url(../img/fondo08.png)!important;
+}
+
+.fondo9 {  
+    background: url(../img/fondo09.png)!important;
+}
+
+.fondo10 {  
+    background: url(../img/fondo10.png)!important;
+}
 
 .card-pf {  
     max-width: 440px!important;
